# FJU-ML-HW

./: .gitignore  Titanic_assignment_data_3.csv  covid-19_mortality_predict.ipynb  decision_tree_hw.ipynb  knn_hw.ipynb  main.ipynb  pyproject.toml  remote_mental_health.ipynb  student_sleep_quality.ipynb  svm_hw.ipynb  titanic_dataset_3.csv
.ipynb_checkpoints/: student_sleep_quality-checkpoint.ipynb
