[tool.poetry]
name = "fju-machine-learning-hw"
version = "0.1.0"
description = ""
authors = ["nick <nickchen1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
jupyter = "^1.1.1"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
imblearn = "^0.0"
matplotlib = "^3.9.2"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
